--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@ h1 {
 }
 
 img{
-  max-width: 320px;
+  width: 320px;
+  height: 200px;
   border-radius: 10px 10px 0 0;
 }
 
@@ -33,7 +34,7 @@ ul li {
 .card {
   margin: 20px;
   max-width: 320px; 
-  box-sizing: 10px;
+  border-radius: 10px;
   padding: 4px;
 }
 
@@ -41,4 +42,11 @@ ul li {
   background-color: rgba(255, 255, 255, .8);
   border-radius: 0 0 10px 10px;
   padding: 10px;
+}
+
+p {
+  text-align: right;
+  font-size: .8em;
+  font-weight: bold;
+  margin-top: 15px;
 }
